kubernetes/apps/kube-system/cilium/config/internal.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.0.30.100"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_01}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_01}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
