kubernetes/apps/kube-system/cilium/config/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - hubble.sluxcloud.com
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
